--- a/app/globals.css
+++ b/app/globals.css
@@ -18,14 +18,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: black;
 }
+p{
+  color:white;
+}
+h1{
+  color:white;
 
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
